# cpp-effects

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: c-cpp.yml
benchmark/: CMakeLists.txt  exceptions.cpp  function.cpp  generator.cpp
doc/: quick-intro.md  refman-clause-modifiers.md  refman-command.md  refman-cpp-effects.md  refman-debug_print_metastack.md  refman-flat_handler.md  refman-fresh_label.md  refman-handle.md  refman-handle_ref.md  refman-handle_with.md  refman-handle_with_ref.md  refman-handler.md  refman-handler_ref.md  refman-invoke_command.md  refman-no_manage.md  refman-no_resume.md  refman-plain.md  refman-resumption.md  refman-resumption_data.md  refman-static_invoke_command.md  refman-wrap.md  refman-wrap_with.md  refman.md
examples/: CMakeLists.txt  actors.cpp  async-await.cpp  composition-actors.cpp  dep-injection.cpp  exceptions.cpp  fuel.cpp  generators.cpp  react.cpp  rollback-state.cpp  shift0-reset.cpp  state.cpp  threads.cpp
include/cpp-effects/: adaptors.h  clause-modifiers.h  cpp-effects.h
src/: CMakeLists.txt  cpp-effects.cpp
test/: CMakeLists.txt  command-lifetime.cpp  cut-out-the-middleman.cpp  global-from-handle.cpp  handler-lifetime.cpp  handler-noresume.cpp  handlers-with-labels.cpp  plain-handler.cpp  swap-handler.cpp  traits.cpp  variadic-commands.cpp
