link_libraries (CppEffects)

add_executable (threads threads.cpp)
add_executable (generators generators.cpp)
add_executable (async-await async-await.cpp)
add_executable (actors actors.cpp)
add_executable (rollback-state rollback-state.cpp)
add_executable (exceptions exceptions.cpp)
add_executable (fuel fuel.cpp)
