add_executable (threads threads.cpp)
add_executable (generators generators.cpp)
add_executable (async-await async-await.cpp)
add_executable (actors actors.cpp)
add_executable (rollback-state rollback-state.cpp)
add_executable (exceptions exceptions.cpp)
add_executable (fuel fuel.cpp)
add_executable (state state.cpp)
add_executable (shift0-reset shift0-reset.cpp)
add_executable (composition-actors composition-actors.cpp)
add_executable (react react.cpp)
add_executable (dep-injection dep-injection.cpp)
