set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/test)
link_libraries (CppEffects)

add_executable (traits traits.cpp)
add_executable (command-lifetime command-lifetime.cpp)
add_executable (cut-out-the-middleman cut-out-the-middleman.cpp)
add_executable (swap-handler swap-handler.cpp)
add_executable (global-from-handle global-from-handle.cpp)
add_executable (handlers-with-labels handlers-with-labels.cpp)
add_executable (plain-handler plain-handler.cpp)
add_executable (handler-noresume handler-noresume.cpp)
